# Leilao

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml
AUDITORIA/planos de correcoes/: plano-de-correcao-do-projeto.md  regras-de-execução-dos-planos-e-correções-no-geral.md
application/dtos/: auction_dtos.py
application/exceptions/: application_exceptions.py
application/ports/: auction_repository.py
application/use_cases/: add_bid_use_case.py  cancel_auction_use_case.py  close_auction_use_case.py  create_auction_use_case.py  get_active_auctions_use_case.py  get_all_auctions_use_case.py  get_auctions_use_case.py  get_seller_auctions_use_case.py  start_auction_use_case.py
domain/Entities/: auction.py  bid.py  test_auction.py
domain/Exceptions/: domain_exceptions.py
domain/Ports/: ports.py
domain/ValueObjects/: money.py  test_money.py
domain/entities/: auction.py  bid.py
domain/events/: domain_event.py
domain/value_objects/: money.py
infrastructure/adapters/: system_clock.py  uuid7_id_generator.py
infrastructure/database/: database.py
infrastructure/models/: __init__.py  auction_model.py  bid_model.py  outbox_event_model.py
infrastructure/repositories/: in_memory_auction_repository.py  postgres_repository.py
infrastructure/workers/: outbox_worker.py
migrations/: env.py
migrations/versions/: 2171df712b0d_create_bids_table.py  2ce19a55bc5b_add_placed_at_and_outbox_events.py  8382d28f945a_create_auctions_table_with_uuid.py
presentation/api/: dependencies.py  exception_handlers.py  main.py  (+1 more)
(+17 files in other folders)
