[project]
name = "projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco2310",email = "74802078+Francisco2310@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.20.2"
sqlalchemy = {extras = ["mypy"], version = "^2.0.49"}
httpx = "^0.28.1"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]


